# cicero_maru_utils

./: README.md  pyproject.toml
src/cicero_maru_utils/: __init__.py  versions.py
src/cicero_maru_utils/labels/: __init__.py  columns.py
src/cicero_maru_utils/processed_vars/: specs.py  types.py
src/cicero_maru_utils/scripts/: __init__.py  maru_parquet_to_lokfram_variables.py  xlsx_to_parquet.py
