[project]
name = "cicero-maru-utils"
version = "0.1.0"
description = "Utilities for processing and analyzing data from the maritime emissions model MarU from Kystverket"
readme = "README.md"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cicero-maru-utils = "cicero_maru_utils:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
