[project]
name = "cicero-maru-utils"
version = "0.2.1"
description = "Utilities for processing and analyzing data from the maritime emissions model MarU from Kystverket"
readme = "README.md"
authors = [
    { name = "Jan Ivar Korsbakken", email = "janko@cicero.oslo.no" }
]
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.14.0",
    "polars>=1.32.0",
]

[project.scripts]
cicero-maru-utils = "cicero_maru_utils:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
